--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "flickity": "^2.3.0",
-        "react-flickity-component": "^4.0.7"
+        "react-flickity-component": "^4.0.7",
+        "react-player": "^2.16.0"
     }
 }
